// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots HOC formInput disabled html text input with combobox role 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 .input {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  box-sizing: border-box;
  border: solid 1px;
  border-radius: 4px;
  border-color: rgba(0,0,0,0.16);
  background-color: rgba(0,0,0,0.16);
  box-shadow: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
}

.c0 .input .wrapped {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c0 .input input {
  height: 46px;
  padding: 0 16px;
  border-radius: 4px;
  border: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  font-family: Lato,sans-serif;
  font-size: 16px;
  color: rgba(0,0,0,0.32);
  background: none;
}

.c0 .input input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input::-moz-placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input:-ms-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input::placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input[type="search"] {
  -webkit-appearance: none;
  -moz-appearance: none;
  padding-left: 8px;
}

.c0 .input input[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.c0 .input input[type="search"]::-ms-clear {
  width: 0;
  height: 0;
}

.c0 .input input[role="combobox"] {
  cursor: default;
}

.c0 .input .icon {
  color: rgba(0,0,0,0.16);
  height: 16px;
}

.c0 .input .icon.left {
  margin-left: 16px;
}

.c0 .input .icon.dropdown {
  margin-left: 8px;
  margin-right: 16px;
}

.c0 .input .clear {
  color: rgba(0,0,0,0.32);
  height: 16px;
  margin-right: 16px;
}

.c0 .input .clear:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3498db;
}

.c0 .input .clear a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c0 .input.dropdown {
  cursor: default;
}

.c0 .label {
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  line-height: 16px;
  text-transform: uppercase;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  margin-bottom: 8px;
  color: rgba(0,0,0,0.32);
  float: left;
}

.c0 .moreInfo {
  position: relative;
  top: -1px;
}

.c0 input[type="number"] {
  -moz-appearance: textfield;
  min-width: 0;
}

.c0 input[type="number"]::-webkit-inner-spin-button,
.c0 input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

<div
  style={
    Object {
      "width": "300px",
    }
  }
>
  <div
    className="c0"
    disabled={true}
    onClick={[Function]}
    type="text"
  >
    <div
      className="input dropdown"
      onMouseDown={[Function]}
    >
      <input
        className="wrapped"
        disabled={true}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Select value"
        role="combobox"
        type="text"
        value=""
      />
      <div
        className="icon dropdown"
      >
        <i
          className="wg-small-arrow-bottom"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots HOC formInput html disabled input with label 1`] = `
.c1 {
  font-family: Lato,sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  color: #2f313a;
  text-align: left;
  font-weight: 600;
  line-height: 1.14;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 .input {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  box-sizing: border-box;
  border: solid 1px;
  border-radius: 4px;
  border-color: rgba(0,0,0,0.16);
  background-color: rgba(0,0,0,0.16);
  box-shadow: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
}

.c0 .input .wrapped {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c0 .input input {
  height: 46px;
  padding: 0 16px;
  border-radius: 4px;
  border: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  font-family: Lato,sans-serif;
  font-size: 16px;
  color: rgba(0,0,0,0.32);
  background: none;
}

.c0 .input input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input::-moz-placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input:-ms-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input::placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input[type="search"] {
  -webkit-appearance: none;
  -moz-appearance: none;
  padding-left: 8px;
}

.c0 .input input[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.c0 .input input[type="search"]::-ms-clear {
  width: 0;
  height: 0;
}

.c0 .input input[role="combobox"] {
  cursor: default;
}

.c0 .input .icon {
  color: rgba(0,0,0,0.16);
  height: 16px;
}

.c0 .input .icon.left {
  margin-left: 16px;
}

.c0 .input .icon.dropdown {
  margin-left: 8px;
  margin-right: 16px;
}

.c0 .input .clear {
  color: rgba(0,0,0,0.32);
  height: 16px;
  margin-right: 16px;
}

.c0 .input .clear:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3498db;
}

.c0 .input .clear a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c0 .input.dropdown {
  cursor: default;
}

.c0 .label {
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  line-height: 16px;
  text-transform: uppercase;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  margin-bottom: 8px;
  color: rgba(0,0,0,0.32);
  float: left;
}

.c0 .moreInfo {
  position: relative;
  top: -1px;
}

.c0 input[type="number"] {
  -moz-appearance: textfield;
  min-width: 0;
}

.c0 input[type="number"]::-webkit-inner-spin-button,
.c0 input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

<div>
  <div
    className="c0"
    disabled={true}
    onClick={[Function]}
    type="text"
  >
    <div
      className="input"
      onMouseDown={[Function]}
    >
      <input
        className="wrapped"
        disabled={true}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
        value="Disabled field"
      />
    </div>
    <div>
      <div
        className="label c1"
        size={14}
        type="#2f313a"
      >
        Input Label
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots HOC formInput html input with clear button 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 .input {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  box-sizing: border-box;
  border: solid 1px;
  border-radius: 4px;
  border-color: rgba(0,0,0,0.16);
  background-color: #ffffff;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
}

.c0 .input .wrapped {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c0 .input input {
  height: 46px;
  padding: 0 16px;
  border-radius: 4px;
  border: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  font-family: Lato,sans-serif;
  font-size: 16px;
  color: #2f313a;
  background: none;
}

.c0 .input input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input::-moz-placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input:-ms-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input::placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input[type="search"] {
  -webkit-appearance: none;
  -moz-appearance: none;
  padding-left: 8px;
}

.c0 .input input[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.c0 .input input[type="search"]::-ms-clear {
  width: 0;
  height: 0;
}

.c0 .input input[role="combobox"] {
  cursor: pointer;
}

.c0 .input .icon {
  color: rgba(0,0,0,0.16);
  height: 16px;
}

.c0 .input .icon.left {
  margin-left: 16px;
}

.c0 .input .icon.dropdown {
  margin-left: 8px;
  margin-right: 16px;
}

.c0 .input .clear {
  color: rgba(0,0,0,0.32);
  height: 16px;
  margin-right: 16px;
}

.c0 .input .clear:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3498db;
}

.c0 .input .clear a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c0 .input.dropdown {
  cursor: pointer;
}

.c0 .label {
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  line-height: 16px;
  text-transform: uppercase;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  margin-bottom: 8px;
  color: #2f313a;
  float: left;
}

.c0 .moreInfo {
  position: relative;
  top: -1px;
}

.c0 input[type="number"] {
  -moz-appearance: textfield;
  min-width: 0;
}

.c0 input[type="number"]::-webkit-inner-spin-button,
.c0 input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

<div
  className="c0"
  disabled={false}
  onClick={[Function]}
  type="text"
>
  <div
    className="input"
    onMouseDown={[Function]}
  >
    <input
      className="wrapped"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="text"
      value=""
    />
    
  </div>
</div>
`;

exports[`Storyshots HOC formInput html input with leftIcon 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 .input {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  box-sizing: border-box;
  border: solid 1px;
  border-radius: 4px;
  border-color: rgba(0,0,0,0.16);
  background-color: #ffffff;
  box-shadow: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
}

.c0 .input .wrapped {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c0 .input input {
  height: 46px;
  padding: 0 16px;
  border-radius: 4px;
  border: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  font-family: Lato,sans-serif;
  font-size: 16px;
  color: #2f313a;
  background: none;
}

.c0 .input input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input::-moz-placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input:-ms-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input::placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input[type="search"] {
  -webkit-appearance: none;
  -moz-appearance: none;
  padding-left: 8px;
}

.c0 .input input[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.c0 .input input[type="search"]::-ms-clear {
  width: 0;
  height: 0;
}

.c0 .input input[role="combobox"] {
  cursor: pointer;
}

.c0 .input .icon {
  color: rgba(0,0,0,0.16);
  height: 16px;
}

.c0 .input .icon.left {
  margin-left: 16px;
}

.c0 .input .icon.dropdown {
  margin-left: 8px;
  margin-right: 16px;
}

.c0 .input .clear {
  color: rgba(0,0,0,0.32);
  height: 16px;
  margin-right: 16px;
}

.c0 .input .clear:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3498db;
}

.c0 .input .clear a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c0 .input.dropdown {
  cursor: pointer;
}

.c0 .label {
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  line-height: 16px;
  text-transform: uppercase;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  margin-bottom: 8px;
  color: #2f313a;
  float: left;
}

.c0 .moreInfo {
  position: relative;
  top: -1px;
}

.c0 input[type="number"] {
  -moz-appearance: textfield;
  min-width: 0;
}

.c0 input[type="number"]::-webkit-inner-spin-button,
.c0 input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

<div
  className="c0"
  disabled={false}
  onClick={[Function]}
  type="text"
>
  <div
    className="input"
    onMouseDown={[Function]}
  >
    <div
      className="icon left"
    >
      <i
        className="wg-order"
      />
    </div>
    <input
      className="wrapped"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="text"
      value="foo bar"
    />
  </div>
</div>
`;

exports[`Storyshots HOC formInput html search input 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 .input {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  box-sizing: border-box;
  border: solid 1px;
  border-radius: 4px;
  border-color: rgba(0,0,0,0.16);
  background-color: #ffffff;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
}

.c0 .input .wrapped {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c0 .input input {
  height: 46px;
  padding: 0 16px;
  border-radius: 4px;
  border: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  font-family: Lato,sans-serif;
  font-size: 16px;
  color: #2f313a;
  background: none;
}

.c0 .input input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input::-moz-placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input:-ms-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input::placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input[type="search"] {
  -webkit-appearance: none;
  -moz-appearance: none;
  padding-left: 8px;
}

.c0 .input input[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.c0 .input input[type="search"]::-ms-clear {
  width: 0;
  height: 0;
}

.c0 .input input[role="combobox"] {
  cursor: pointer;
}

.c0 .input .icon {
  color: rgba(0,0,0,0.16);
  height: 16px;
}

.c0 .input .icon.left {
  margin-left: 16px;
}

.c0 .input .icon.dropdown {
  margin-left: 8px;
  margin-right: 16px;
}

.c0 .input .clear {
  color: rgba(0,0,0,0.32);
  height: 16px;
  margin-right: 16px;
}

.c0 .input .clear:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3498db;
}

.c0 .input .clear a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c0 .input.dropdown {
  cursor: pointer;
}

.c0 .label {
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  line-height: 16px;
  text-transform: uppercase;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  margin-bottom: 8px;
  color: #2f313a;
  float: left;
}

.c0 .moreInfo {
  position: relative;
  top: -1px;
}

.c0 input[type="number"] {
  -moz-appearance: textfield;
  min-width: 0;
}

.c0 input[type="number"]::-webkit-inner-spin-button,
.c0 input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

<div
  className="c0"
  disabled={false}
  onClick={[Function]}
  type="search"
>
  <div
    className="input"
    onMouseDown={[Function]}
  >
    <div
      className="icon left"
    >
      <i
        className="wg-search"
      />
    </div>
    <input
      className="wrapped"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="search"
      value=""
    />
    
  </div>
</div>
`;

exports[`Storyshots HOC formInput html search input with custom clear icon 1`] = `
.c1 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #3498db;
}

.c1 > i.margin-left {
  margin-left: 8px;
}

.c1 > i.margin-right {
  margin-right: 8px;
}

.c1 > a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 > a:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c1 > a {
  color: inherit;
}

.c1:hover {
  color: #2980b9;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 .input {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  box-sizing: border-box;
  border: solid 1px;
  border-radius: 4px;
  border-color: rgba(0,0,0,0.16);
  background-color: #ffffff;
  box-shadow: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
}

.c0 .input .wrapped {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c0 .input input {
  height: 46px;
  padding: 0 16px;
  border-radius: 4px;
  border: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  font-family: Lato,sans-serif;
  font-size: 16px;
  color: #2f313a;
  background: none;
}

.c0 .input input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input::-moz-placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input:-ms-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input::placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input[type="search"] {
  -webkit-appearance: none;
  -moz-appearance: none;
  padding-left: 8px;
}

.c0 .input input[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.c0 .input input[type="search"]::-ms-clear {
  width: 0;
  height: 0;
}

.c0 .input input[role="combobox"] {
  cursor: pointer;
}

.c0 .input .icon {
  color: rgba(0,0,0,0.16);
  height: 16px;
}

.c0 .input .icon.left {
  margin-left: 16px;
}

.c0 .input .icon.dropdown {
  margin-left: 8px;
  margin-right: 16px;
}

.c0 .input .clear {
  color: rgba(0,0,0,0.32);
  height: 16px;
  margin-right: 16px;
}

.c0 .input .clear:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3498db;
}

.c0 .input .clear a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c0 .input.dropdown {
  cursor: pointer;
}

.c0 .label {
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  line-height: 16px;
  text-transform: uppercase;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  margin-bottom: 8px;
  color: #2f313a;
  float: left;
}

.c0 .moreInfo {
  position: relative;
  top: -1px;
}

.c0 input[type="number"] {
  -moz-appearance: textfield;
  min-width: 0;
}

.c0 input[type="number"]::-webkit-inner-spin-button,
.c0 input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

<div
  className="c0"
  disabled={false}
  onClick={[Function]}
  type="search"
>
  <div
    className="input"
    onMouseDown={[Function]}
  >
    <div
      className="icon left"
    >
      <i
        className="wg-search"
      />
    </div>
    <input
      className="wrapped"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="search"
      value="broccoli"
    />
    <div
      className="c1"
      disabled={false}
      size={16}
      type="#3498db"
    >
      <span
        className="clear"
        onClick={[Function]}
      >
        <i
          className="wg-close"
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots HOC formInput html search input with value 1`] = `
.c1 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #3498db;
}

.c1 > i.margin-left {
  margin-left: 8px;
}

.c1 > i.margin-right {
  margin-right: 8px;
}

.c1 > a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 > a:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c1 > a {
  color: inherit;
}

.c1:hover {
  color: #2980b9;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 .input {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  box-sizing: border-box;
  border: solid 1px;
  border-radius: 4px;
  border-color: rgba(0,0,0,0.16);
  background-color: #ffffff;
  box-shadow: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
}

.c0 .input .wrapped {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c0 .input input {
  height: 46px;
  padding: 0 16px;
  border-radius: 4px;
  border: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  font-family: Lato,sans-serif;
  font-size: 16px;
  color: #2f313a;
  background: none;
}

.c0 .input input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input::-moz-placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input:-ms-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input::placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input[type="search"] {
  -webkit-appearance: none;
  -moz-appearance: none;
  padding-left: 8px;
}

.c0 .input input[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.c0 .input input[type="search"]::-ms-clear {
  width: 0;
  height: 0;
}

.c0 .input input[role="combobox"] {
  cursor: pointer;
}

.c0 .input .icon {
  color: rgba(0,0,0,0.16);
  height: 16px;
}

.c0 .input .icon.left {
  margin-left: 16px;
}

.c0 .input .icon.dropdown {
  margin-left: 8px;
  margin-right: 16px;
}

.c0 .input .clear {
  color: rgba(0,0,0,0.32);
  height: 16px;
  margin-right: 16px;
}

.c0 .input .clear:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3498db;
}

.c0 .input .clear a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c0 .input.dropdown {
  cursor: pointer;
}

.c0 .label {
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  line-height: 16px;
  text-transform: uppercase;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  margin-bottom: 8px;
  color: #2f313a;
  float: left;
}

.c0 .moreInfo {
  position: relative;
  top: -1px;
}

.c0 input[type="number"] {
  -moz-appearance: textfield;
  min-width: 0;
}

.c0 input[type="number"]::-webkit-inner-spin-button,
.c0 input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

<div
  className="c0"
  disabled={false}
  onClick={[Function]}
  type="search"
>
  <div
    className="input"
    onMouseDown={[Function]}
  >
    <div
      className="icon left"
    >
      <i
        className="wg-search"
      />
    </div>
    <input
      className="wrapped"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="search"
      value="broccoli"
    />
    <div
      className="c1"
      disabled={false}
      size={16}
      type="#3498db"
    >
      <span
        className="clear"
        onClick={[Function]}
      >
        <i
          className="wg-close-int"
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots HOC formInput html text input 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 .input {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  box-sizing: border-box;
  border: solid 1px;
  border-radius: 4px;
  border-color: rgba(0,0,0,0.16);
  background-color: #ffffff;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
}

.c0 .input .wrapped {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c0 .input input {
  height: 46px;
  padding: 0 16px;
  border-radius: 4px;
  border: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  font-family: Lato,sans-serif;
  font-size: 16px;
  color: #2f313a;
  background: none;
}

.c0 .input input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input::-moz-placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input:-ms-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input::placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input[type="search"] {
  -webkit-appearance: none;
  -moz-appearance: none;
  padding-left: 8px;
}

.c0 .input input[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.c0 .input input[type="search"]::-ms-clear {
  width: 0;
  height: 0;
}

.c0 .input input[role="combobox"] {
  cursor: pointer;
}

.c0 .input .icon {
  color: rgba(0,0,0,0.16);
  height: 16px;
}

.c0 .input .icon.left {
  margin-left: 16px;
}

.c0 .input .icon.dropdown {
  margin-left: 8px;
  margin-right: 16px;
}

.c0 .input .clear {
  color: rgba(0,0,0,0.32);
  height: 16px;
  margin-right: 16px;
}

.c0 .input .clear:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3498db;
}

.c0 .input .clear a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c0 .input.dropdown {
  cursor: pointer;
}

.c0 .label {
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  line-height: 16px;
  text-transform: uppercase;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  margin-bottom: 8px;
  color: #2f313a;
  float: left;
}

.c0 .moreInfo {
  position: relative;
  top: -1px;
}

.c0 input[type="number"] {
  -moz-appearance: textfield;
  min-width: 0;
}

.c0 input[type="number"]::-webkit-inner-spin-button,
.c0 input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

<div
  className="c0"
  disabled={false}
  onClick={[Function]}
  type="text"
>
  <div
    className="input"
    onMouseDown={[Function]}
  >
    <input
      className="wrapped"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`Storyshots HOC formInput html text input with combobox readonly role 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 .input {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  box-sizing: border-box;
  border: solid 1px;
  border-radius: 4px;
  border-color: rgba(0,0,0,0.16);
  background-color: #ffffff;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
}

.c0 .input .wrapped {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c0 .input input {
  height: 46px;
  padding: 0 16px;
  border-radius: 4px;
  border: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  font-family: Lato,sans-serif;
  font-size: 16px;
  color: #2f313a;
  background: none;
}

.c0 .input input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input::-moz-placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input:-ms-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input::placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input[type="search"] {
  -webkit-appearance: none;
  -moz-appearance: none;
  padding-left: 8px;
}

.c0 .input input[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.c0 .input input[type="search"]::-ms-clear {
  width: 0;
  height: 0;
}

.c0 .input input[role="combobox"] {
  cursor: pointer;
}

.c0 .input .icon {
  color: rgba(0,0,0,0.16);
  height: 16px;
}

.c0 .input .icon.left {
  margin-left: 16px;
}

.c0 .input .icon.dropdown {
  margin-left: 8px;
  margin-right: 16px;
}

.c0 .input .clear {
  color: rgba(0,0,0,0.32);
  height: 16px;
  margin-right: 16px;
}

.c0 .input .clear:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3498db;
}

.c0 .input .clear a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c0 .input.dropdown {
  cursor: pointer;
}

.c0 .label {
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  line-height: 16px;
  text-transform: uppercase;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  margin-bottom: 8px;
  color: #2f313a;
  float: left;
}

.c0 .moreInfo {
  position: relative;
  top: -1px;
}

.c0 input[type="number"] {
  -moz-appearance: textfield;
  min-width: 0;
}

.c0 input[type="number"]::-webkit-inner-spin-button,
.c0 input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

<div
  style={
    Object {
      "width": "300px",
    }
  }
>
  <div
    className="c0"
    disabled={false}
    onClick={[Function]}
    type="text"
  >
    <div
      className="input dropdown"
      onMouseDown={[Function]}
    >
      <input
        className="wrapped"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Select value"
        readOnly={true}
        role="combobox"
        type="text"
        value=""
      />
      <div
        className="icon dropdown"
      >
        <i
          className="wg-small-arrow-bottom"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots HOC formInput html text input with combobox role 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 .input {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  box-sizing: border-box;
  border: solid 1px;
  border-radius: 4px;
  border-color: rgba(0,0,0,0.16);
  background-color: #ffffff;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
}

.c0 .input .wrapped {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c0 .input input {
  height: 46px;
  padding: 0 16px;
  border-radius: 4px;
  border: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  font-family: Lato,sans-serif;
  font-size: 16px;
  color: #2f313a;
  background: none;
}

.c0 .input input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input::-moz-placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input:-ms-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input::placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input[type="search"] {
  -webkit-appearance: none;
  -moz-appearance: none;
  padding-left: 8px;
}

.c0 .input input[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.c0 .input input[type="search"]::-ms-clear {
  width: 0;
  height: 0;
}

.c0 .input input[role="combobox"] {
  cursor: pointer;
}

.c0 .input .icon {
  color: rgba(0,0,0,0.16);
  height: 16px;
}

.c0 .input .icon.left {
  margin-left: 16px;
}

.c0 .input .icon.dropdown {
  margin-left: 8px;
  margin-right: 16px;
}

.c0 .input .clear {
  color: rgba(0,0,0,0.32);
  height: 16px;
  margin-right: 16px;
}

.c0 .input .clear:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3498db;
}

.c0 .input .clear a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c0 .input.dropdown {
  cursor: pointer;
}

.c0 .label {
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  line-height: 16px;
  text-transform: uppercase;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  margin-bottom: 8px;
  color: #2f313a;
  float: left;
}

.c0 .moreInfo {
  position: relative;
  top: -1px;
}

.c0 input[type="number"] {
  -moz-appearance: textfield;
  min-width: 0;
}

.c0 input[type="number"]::-webkit-inner-spin-button,
.c0 input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

<div
  style={
    Object {
      "width": "300px",
    }
  }
>
  <div
    className="c0"
    disabled={false}
    onClick={[Function]}
    type="text"
  >
    <div
      className="input dropdown"
      onMouseDown={[Function]}
    >
      <input
        className="wrapped"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Select value"
        role="combobox"
        type="text"
        value=""
      />
      <div
        className="icon dropdown"
      >
        <i
          className="wg-small-arrow-bottom"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots HOC formInput html text input with input.onChange and input.value  1`] = `
.c1 {
  font-family: Lato,sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  color: #2f313a;
  text-align: left;
  font-weight: 600;
  line-height: 1.14;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 .input {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  box-sizing: border-box;
  border: solid 1px;
  border-radius: 4px;
  border-color: rgba(0,0,0,0.16);
  background-color: #ffffff;
  box-shadow: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
}

.c0 .input .wrapped {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c0 .input input {
  height: 46px;
  padding: 0 16px;
  border-radius: 4px;
  border: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  font-family: Lato,sans-serif;
  font-size: 16px;
  color: #2f313a;
  background: none;
}

.c0 .input input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input::-moz-placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input:-ms-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input::placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input[type="search"] {
  -webkit-appearance: none;
  -moz-appearance: none;
  padding-left: 8px;
}

.c0 .input input[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.c0 .input input[type="search"]::-ms-clear {
  width: 0;
  height: 0;
}

.c0 .input input[role="combobox"] {
  cursor: pointer;
}

.c0 .input .icon {
  color: rgba(0,0,0,0.16);
  height: 16px;
}

.c0 .input .icon.left {
  margin-left: 16px;
}

.c0 .input .icon.dropdown {
  margin-left: 8px;
  margin-right: 16px;
}

.c0 .input .clear {
  color: rgba(0,0,0,0.32);
  height: 16px;
  margin-right: 16px;
}

.c0 .input .clear:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3498db;
}

.c0 .input .clear a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c0 .input.dropdown {
  cursor: pointer;
}

.c0 .label {
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  line-height: 16px;
  text-transform: uppercase;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  margin-bottom: 8px;
  color: #2f313a;
  float: left;
}

.c0 .moreInfo {
  position: relative;
  top: -1px;
}

.c0 input[type="number"] {
  -moz-appearance: textfield;
  min-width: 0;
}

.c0 input[type="number"]::-webkit-inner-spin-button,
.c0 input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

<div
  className="c0"
  disabled={false}
  onClick={[Function]}
  type="text"
>
  <div
    className="input"
    onMouseDown={[Function]}
  >
    <input
      className="wrapped"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="text"
      value="input.value"
    />
  </div>
  <div>
    <div
      className="label c1"
      size={14}
      type="#2f313a"
    >
      Input Label
    </div>
  </div>
</div>
`;

exports[`Storyshots HOC formInput html text input with label 1`] = `
.c1 {
  font-family: Lato,sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  color: #2f313a;
  text-align: left;
  font-weight: 600;
  line-height: 1.14;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 .input {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  box-sizing: border-box;
  border: solid 1px;
  border-radius: 4px;
  border-color: rgba(0,0,0,0.16);
  background-color: #ffffff;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
}

.c0 .input .wrapped {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c0 .input input {
  height: 46px;
  padding: 0 16px;
  border-radius: 4px;
  border: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  font-family: Lato,sans-serif;
  font-size: 16px;
  color: #2f313a;
  background: none;
}

.c0 .input input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input::-moz-placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input:-ms-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input::placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input[type="search"] {
  -webkit-appearance: none;
  -moz-appearance: none;
  padding-left: 8px;
}

.c0 .input input[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.c0 .input input[type="search"]::-ms-clear {
  width: 0;
  height: 0;
}

.c0 .input input[role="combobox"] {
  cursor: pointer;
}

.c0 .input .icon {
  color: rgba(0,0,0,0.16);
  height: 16px;
}

.c0 .input .icon.left {
  margin-left: 16px;
}

.c0 .input .icon.dropdown {
  margin-left: 8px;
  margin-right: 16px;
}

.c0 .input .clear {
  color: rgba(0,0,0,0.32);
  height: 16px;
  margin-right: 16px;
}

.c0 .input .clear:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3498db;
}

.c0 .input .clear a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c0 .input.dropdown {
  cursor: pointer;
}

.c0 .label {
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  line-height: 16px;
  text-transform: uppercase;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  margin-bottom: 8px;
  color: #2f313a;
  float: left;
}

.c0 .moreInfo {
  position: relative;
  top: -1px;
}

.c0 input[type="number"] {
  -moz-appearance: textfield;
  min-width: 0;
}

.c0 input[type="number"]::-webkit-inner-spin-button,
.c0 input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

<div
  className="c0"
  disabled={false}
  onClick={[Function]}
  type="text"
>
  <div
    className="input"
    onMouseDown={[Function]}
  >
    <input
      className="wrapped"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="text"
      value=""
    />
  </div>
  <div>
    <div
      className="label c1"
      size={14}
      type="#2f313a"
    >
      Input Label
    </div>
  </div>
</div>
`;

exports[`Storyshots HOC formInput html text input with label and focused flag 1`] = `
.c1 {
  font-family: Lato,sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  color: #2f313a;
  text-align: left;
  font-weight: 600;
  line-height: 1.14;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 .input {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  box-sizing: border-box;
  border: solid 1px;
  border-radius: 4px;
  border-color: #3498db;
  background-color: #ffffff;
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
}

.c0 .input .wrapped {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c0 .input input {
  height: 46px;
  padding: 0 16px;
  border-radius: 4px;
  border: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  font-family: Lato,sans-serif;
  font-size: 16px;
  color: #2f313a;
  background: none;
}

.c0 .input input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.16);
}

.c0 .input input::-moz-placeholder {
  color: rgba(0,0,0,0.16);
}

.c0 .input input:-ms-input-placeholder {
  color: rgba(0,0,0,0.16);
}

.c0 .input input::placeholder {
  color: rgba(0,0,0,0.16);
}

.c0 .input input[type="search"] {
  -webkit-appearance: none;
  -moz-appearance: none;
  padding-left: 8px;
}

.c0 .input input[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.c0 .input input[type="search"]::-ms-clear {
  width: 0;
  height: 0;
}

.c0 .input input[role="combobox"] {
  cursor: pointer;
}

.c0 .input .icon {
  color: #3498db;
  height: 16px;
}

.c0 .input .icon.left {
  margin-left: 16px;
}

.c0 .input .icon.dropdown {
  margin-left: 8px;
  margin-right: 16px;
}

.c0 .input .clear {
  color: rgba(0,0,0,0.32);
  height: 16px;
  margin-right: 16px;
}

.c0 .input .clear:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3498db;
}

.c0 .input .clear a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c0 .input.dropdown {
  cursor: pointer;
}

.c0 .label {
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  line-height: 16px;
  text-transform: uppercase;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  margin-bottom: 8px;
  color: #3498db;
  float: left;
}

.c0 .moreInfo {
  position: relative;
  top: -1px;
}

.c0 input[type="number"] {
  -moz-appearance: textfield;
  min-width: 0;
}

.c0 input[type="number"]::-webkit-inner-spin-button,
.c0 input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

<div
  className="c0"
  disabled={false}
  onClick={[Function]}
  type="text"
>
  <div
    className="input"
    onMouseDown={[Function]}
  >
    <input
      className="wrapped"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="text"
      value=""
    />
  </div>
  <div>
    <div
      className="label c1"
      size={14}
      type="#2f313a"
    >
      Input Label
    </div>
  </div>
</div>
`;

exports[`Storyshots HOC formInput html text input with label and placeholder 1`] = `
.c1 {
  font-family: Lato,sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  color: #2f313a;
  text-align: left;
  font-weight: 600;
  line-height: 1.14;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 .input {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  box-sizing: border-box;
  border: solid 1px;
  border-radius: 4px;
  border-color: rgba(0,0,0,0.16);
  background-color: #ffffff;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
}

.c0 .input .wrapped {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c0 .input input {
  height: 46px;
  padding: 0 16px;
  border-radius: 4px;
  border: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  font-family: Lato,sans-serif;
  font-size: 16px;
  color: #2f313a;
  background: none;
}

.c0 .input input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input::-moz-placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input:-ms-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input::placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input[type="search"] {
  -webkit-appearance: none;
  -moz-appearance: none;
  padding-left: 8px;
}

.c0 .input input[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.c0 .input input[type="search"]::-ms-clear {
  width: 0;
  height: 0;
}

.c0 .input input[role="combobox"] {
  cursor: pointer;
}

.c0 .input .icon {
  color: rgba(0,0,0,0.16);
  height: 16px;
}

.c0 .input .icon.left {
  margin-left: 16px;
}

.c0 .input .icon.dropdown {
  margin-left: 8px;
  margin-right: 16px;
}

.c0 .input .clear {
  color: rgba(0,0,0,0.32);
  height: 16px;
  margin-right: 16px;
}

.c0 .input .clear:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3498db;
}

.c0 .input .clear a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c0 .input.dropdown {
  cursor: pointer;
}

.c0 .label {
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  line-height: 16px;
  text-transform: uppercase;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  margin-bottom: 8px;
  color: #2f313a;
  float: left;
}

.c0 .moreInfo {
  position: relative;
  top: -1px;
}

.c0 input[type="number"] {
  -moz-appearance: textfield;
  min-width: 0;
}

.c0 input[type="number"]::-webkit-inner-spin-button,
.c0 input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

<div
  className="c0"
  disabled={false}
  onClick={[Function]}
  type="text"
>
  <div
    className="input"
    onMouseDown={[Function]}
  >
    <input
      className="wrapped"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="a placeholder"
      type="text"
      value=""
    />
  </div>
  <div>
    <div
      className="label c1"
      size={14}
      type="#2f313a"
    >
      Input Label
    </div>
  </div>
</div>
`;

exports[`Storyshots HOC formInput input with fontSize property SMALL 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 .input {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  box-sizing: border-box;
  border: solid 1px;
  border-radius: 4px;
  border-color: rgba(0,0,0,0.16);
  background-color: #ffffff;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
}

.c0 .input .wrapped {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c0 .input input {
  height: 30px;
  padding: 0 8px;
  border-radius: 4px;
  border: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  font-family: Lato,sans-serif;
  font-size: 14px;
  color: #2f313a;
  background: none;
}

.c0 .input input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input::-moz-placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input:-ms-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input::placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input[type="search"] {
  -webkit-appearance: none;
  -moz-appearance: none;
  padding-left: 8px;
}

.c0 .input input[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.c0 .input input[type="search"]::-ms-clear {
  width: 0;
  height: 0;
}

.c0 .input input[role="combobox"] {
  cursor: pointer;
}

.c0 .input .icon {
  color: rgba(0,0,0,0.16);
  height: 16px;
}

.c0 .input .icon.left {
  margin-left: 8px;
}

.c0 .input .icon.dropdown {
  margin-left: 8px;
  margin-right: 16px;
}

.c0 .input .clear {
  color: rgba(0,0,0,0.32);
  height: 16px;
  margin-right: 8px;
}

.c0 .input .clear:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3498db;
}

.c0 .input .clear a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c0 .input.dropdown {
  cursor: pointer;
}

.c0 .label {
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  line-height: 16px;
  text-transform: uppercase;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  margin-bottom: 8px;
  color: #2f313a;
  float: left;
}

.c0 .moreInfo {
  position: relative;
  top: -1px;
}

.c0 input[type="number"] {
  -moz-appearance: textfield;
  min-width: 0;
}

.c0 input[type="number"]::-webkit-inner-spin-button,
.c0 input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

<div
  className="c0"
  disabled={false}
  fontSize={14}
  onClick={[Function]}
  type="text"
>
  <div
    className="input"
    onMouseDown={[Function]}
  >
    <input
      className="wrapped"
      disabled={false}
      fontSize={14}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`Storyshots HOC formInput invalid input 1`] = `
.c1 {
  font-family: Lato,sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  color: #2f313a;
  text-align: left;
  font-weight: 600;
  line-height: 1.14;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 .input {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  box-sizing: border-box;
  border: solid 1px;
  border-radius: 4px;
  border-color: #dd3311;
  background-color: #ffffff;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
}

.c0 .input .wrapped {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c0 .input input {
  height: 46px;
  padding: 0 16px;
  border-radius: 4px;
  border: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  font-family: Lato,sans-serif;
  font-size: 16px;
  color: #2f313a;
  background: none;
}

.c0 .input input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input::-moz-placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input:-ms-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input::placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input[type="search"] {
  -webkit-appearance: none;
  -moz-appearance: none;
  padding-left: 8px;
}

.c0 .input input[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.c0 .input input[type="search"]::-ms-clear {
  width: 0;
  height: 0;
}

.c0 .input input[role="combobox"] {
  cursor: pointer;
}

.c0 .input .icon {
  color: #dd3311;
  height: 16px;
}

.c0 .input .icon.left {
  margin-left: 16px;
}

.c0 .input .icon.dropdown {
  margin-left: 8px;
  margin-right: 16px;
}

.c0 .input .clear {
  color: rgba(0,0,0,0.32);
  height: 16px;
  margin-right: 16px;
}

.c0 .input .clear:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3498db;
}

.c0 .input .clear a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c0 .input.dropdown {
  cursor: pointer;
}

.c0 .label {
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  line-height: 16px;
  text-transform: uppercase;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  margin-bottom: 8px;
  color: #dd3311;
  float: left;
}

.c0 .moreInfo {
  position: relative;
  top: -1px;
}

.c0 input[type="number"] {
  -moz-appearance: textfield;
  min-width: 0;
}

.c0 input[type="number"]::-webkit-inner-spin-button,
.c0 input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

<div
  className="c0"
  disabled={false}
  onClick={[Function]}
  type="text"
>
  <div
    className="input"
    onMouseDown={[Function]}
  >
    <input
      className="wrapped"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="text"
      value=""
    />
  </div>
  <div>
    <div
      className="label c1"
      size={14}
      type="#2f313a"
    >
      Input Label
    </div>
  </div>
</div>
`;

exports[`Storyshots HOC formInput small html input with leftIcon 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 .input {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  box-sizing: border-box;
  border: solid 1px;
  border-radius: 4px;
  border-color: rgba(0,0,0,0.16);
  background-color: #ffffff;
  box-shadow: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
}

.c0 .input .wrapped {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c0 .input input {
  height: 30px;
  padding: 0 8px;
  border-radius: 4px;
  border: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  font-family: Lato,sans-serif;
  font-size: 14px;
  color: #2f313a;
  background: none;
}

.c0 .input input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input::-moz-placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input:-ms-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input::placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input[type="search"] {
  -webkit-appearance: none;
  -moz-appearance: none;
  padding-left: 8px;
}

.c0 .input input[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.c0 .input input[type="search"]::-ms-clear {
  width: 0;
  height: 0;
}

.c0 .input input[role="combobox"] {
  cursor: pointer;
}

.c0 .input .icon {
  color: rgba(0,0,0,0.16);
  height: 16px;
}

.c0 .input .icon.left {
  margin-left: 8px;
}

.c0 .input .icon.dropdown {
  margin-left: 8px;
  margin-right: 16px;
}

.c0 .input .clear {
  color: rgba(0,0,0,0.32);
  height: 16px;
  margin-right: 8px;
}

.c0 .input .clear:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3498db;
}

.c0 .input .clear a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c0 .input.dropdown {
  cursor: pointer;
}

.c0 .label {
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  line-height: 16px;
  text-transform: uppercase;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  margin-bottom: 8px;
  color: #2f313a;
  float: left;
}

.c0 .moreInfo {
  position: relative;
  top: -1px;
}

.c0 input[type="number"] {
  -moz-appearance: textfield;
  min-width: 0;
}

.c0 input[type="number"]::-webkit-inner-spin-button,
.c0 input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

<div
  className="c0"
  disabled={false}
  fontSize={14}
  onClick={[Function]}
  type="text"
>
  <div
    className="input"
    onMouseDown={[Function]}
  >
    <div
      className="icon left"
    >
      <i
        className="wg-order"
      />
    </div>
    <input
      className="wrapped"
      disabled={false}
      fontSize={14}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="text"
      value="foo bar"
    />
  </div>
</div>
`;

exports[`Storyshots HOC formInput small html search input with value 1`] = `
.c1 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #3498db;
}

.c1 > i.margin-left {
  margin-left: 8px;
}

.c1 > i.margin-right {
  margin-right: 8px;
}

.c1 > a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 > a:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c1 > a {
  color: inherit;
}

.c1:hover {
  color: #2980b9;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 .input {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  box-sizing: border-box;
  border: solid 1px;
  border-radius: 4px;
  border-color: rgba(0,0,0,0.16);
  background-color: #ffffff;
  box-shadow: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
}

.c0 .input .wrapped {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c0 .input input {
  height: 30px;
  padding: 0 8px;
  border-radius: 4px;
  border: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  font-family: Lato,sans-serif;
  font-size: 14px;
  color: #2f313a;
  background: none;
}

.c0 .input input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input::-moz-placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input:-ms-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input::placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input[type="search"] {
  -webkit-appearance: none;
  -moz-appearance: none;
  padding-left: 8px;
}

.c0 .input input[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.c0 .input input[type="search"]::-ms-clear {
  width: 0;
  height: 0;
}

.c0 .input input[role="combobox"] {
  cursor: pointer;
}

.c0 .input .icon {
  color: rgba(0,0,0,0.16);
  height: 16px;
}

.c0 .input .icon.left {
  margin-left: 8px;
}

.c0 .input .icon.dropdown {
  margin-left: 8px;
  margin-right: 16px;
}

.c0 .input .clear {
  color: rgba(0,0,0,0.32);
  height: 16px;
  margin-right: 8px;
}

.c0 .input .clear:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3498db;
}

.c0 .input .clear a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c0 .input.dropdown {
  cursor: pointer;
}

.c0 .label {
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  line-height: 16px;
  text-transform: uppercase;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  margin-bottom: 8px;
  color: #2f313a;
  float: left;
}

.c0 .moreInfo {
  position: relative;
  top: -1px;
}

.c0 input[type="number"] {
  -moz-appearance: textfield;
  min-width: 0;
}

.c0 input[type="number"]::-webkit-inner-spin-button,
.c0 input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

<div
  className="c0"
  disabled={false}
  fontSize={14}
  onClick={[Function]}
  type="search"
>
  <div
    className="input"
    onMouseDown={[Function]}
  >
    <div
      className="icon left"
    >
      <i
        className="wg-search"
      />
    </div>
    <input
      className="wrapped"
      disabled={false}
      fontSize={14}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="search"
      value="broccoli"
    />
    <div
      className="c1"
      disabled={false}
      size={16}
      type="#3498db"
    >
      <span
        className="clear"
        onClick={[Function]}
      >
        <i
          className="wg-close-int"
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots HOC formInput two html inputs with label 1`] = `
.c1 {
  font-family: Lato,sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  color: #2f313a;
  text-align: left;
  font-weight: 600;
  line-height: 1.14;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 .input {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  box-sizing: border-box;
  border: solid 1px;
  border-radius: 4px;
  border-color: rgba(0,0,0,0.16);
  background-color: #ffffff;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
}

.c0 .input .wrapped {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c0 .input input {
  height: 46px;
  padding: 0 16px;
  border-radius: 4px;
  border: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  font-family: Lato,sans-serif;
  font-size: 16px;
  color: #2f313a;
  background: none;
}

.c0 .input input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input::-moz-placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input:-ms-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input::placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input[type="search"] {
  -webkit-appearance: none;
  -moz-appearance: none;
  padding-left: 8px;
}

.c0 .input input[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.c0 .input input[type="search"]::-ms-clear {
  width: 0;
  height: 0;
}

.c0 .input input[role="combobox"] {
  cursor: pointer;
}

.c0 .input .icon {
  color: rgba(0,0,0,0.16);
  height: 16px;
}

.c0 .input .icon.left {
  margin-left: 16px;
}

.c0 .input .icon.dropdown {
  margin-left: 8px;
  margin-right: 16px;
}

.c0 .input .clear {
  color: rgba(0,0,0,0.32);
  height: 16px;
  margin-right: 16px;
}

.c0 .input .clear:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3498db;
}

.c0 .input .clear a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c0 .input.dropdown {
  cursor: pointer;
}

.c0 .label {
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  line-height: 16px;
  text-transform: uppercase;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  margin-bottom: 8px;
  color: #2f313a;
  float: left;
}

.c0 .moreInfo {
  position: relative;
  top: -1px;
}

.c0 input[type="number"] {
  -moz-appearance: textfield;
  min-width: 0;
}

.c0 input[type="number"]::-webkit-inner-spin-button,
.c0 input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

<div>
  <div
    className="c0"
    disabled={false}
    onClick={[Function]}
    type="text"
  >
    <div
      className="input"
      onMouseDown={[Function]}
    >
      <input
        className="wrapped"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
        value=""
      />
    </div>
    <div>
      <div
        className="label c1"
        size={14}
        type="#2f313a"
      >
        Input Label
      </div>
    </div>
  </div>
  <div
    className="c0"
    disabled={false}
    onClick={[Function]}
    type="checkbox"
  >
    <div
      className="input"
      onMouseDown={[Function]}
    >
      <input
        className="wrapped"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="checkbox"
        value=""
      />
    </div>
    <div>
      <div
        className="label c1"
        size={14}
        type="#2f313a"
      >
        Input Label
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots HOC formInput with label and more info 1`] = `
.c4 {
  position: relative;
}

.c5 {
  -webkit-transition: visibility 0s linear 0.1s,opacity 0.1s linear;
  transition: visibility 0s linear 0.1s,opacity 0.1s linear;
  visibility: hidden;
  opacity: 0;
  position: absolute;
  z-index: 1000;
  top: 15px;
  padding: 8px;
  background-color: #ffffff;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  white-space: pre;
  color: #2f313a;
  font-family: lato,sans-serif;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.c5:after,
.c5:before {
  bottom: 100%;
  border: solid 1px rgba(0,0,0,0.16);
  content: " ";
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.c5:before {
  border-color: transparent;
  border-bottom-color: rgba(0,0,0,0.16);
  border-width: 8px;
  color: red;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.c5:after {
  border-color: transparent;
  border-bottom-color: #ffffff;
  border-width: 7px;
  color: red;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.c1 {
  font-family: Lato,sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  color: #2f313a;
  text-align: left;
  font-weight: 600;
  line-height: 1.14;
}

.c3 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  color: #59636f;
  text-align: left;
  font-weight: 600;
}

.c2 .icon {
  display: inline-block;
  margin: 0 8px;
}

.c2 .hit-area {
  margin: -12px;
  padding: 12px;
  margin-top: -62px;
  padding-top: 62px;
}

.c2 .icon:hover,
.c2 .hovered {
  color: #3498db;
}

.c2 .icon:hover {
  color: #3498db;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 .input {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  box-sizing: border-box;
  border: solid 1px;
  border-radius: 4px;
  border-color: rgba(0,0,0,0.16);
  background-color: #ffffff;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
}

.c0 .input .wrapped {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c0 .input input {
  height: 46px;
  padding: 0 16px;
  border-radius: 4px;
  border: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  font-family: Lato,sans-serif;
  font-size: 16px;
  color: #2f313a;
  background: none;
}

.c0 .input input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input::-moz-placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input:-ms-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input::placeholder {
  color: rgba(0,0,0,0.32);
}

.c0 .input input[type="search"] {
  -webkit-appearance: none;
  -moz-appearance: none;
  padding-left: 8px;
}

.c0 .input input[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.c0 .input input[type="search"]::-ms-clear {
  width: 0;
  height: 0;
}

.c0 .input input[role="combobox"] {
  cursor: pointer;
}

.c0 .input .icon {
  color: rgba(0,0,0,0.16);
  height: 16px;
}

.c0 .input .icon.left {
  margin-left: 16px;
}

.c0 .input .icon.dropdown {
  margin-left: 8px;
  margin-right: 16px;
}

.c0 .input .clear {
  color: rgba(0,0,0,0.32);
  height: 16px;
  margin-right: 16px;
}

.c0 .input .clear:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3498db;
}

.c0 .input .clear a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c0 .input.dropdown {
  cursor: pointer;
}

.c0 .label {
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  line-height: 16px;
  text-transform: uppercase;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  margin-bottom: 8px;
  color: #2f313a;
  float: left;
}

.c0 .moreInfo {
  position: relative;
  top: -1px;
}

.c0 input[type="number"] {
  -moz-appearance: textfield;
  min-width: 0;
}

.c0 input[type="number"]::-webkit-inner-spin-button,
.c0 input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

<div
  className="c0"
  disabled={false}
  onClick={[Function]}
  type="text"
>
  <div
    className="input"
    onMouseDown={[Function]}
  >
    <input
      className="wrapped"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="text"
      value=""
    />
  </div>
  <div>
    <div
      className="label c1"
      size={14}
      type="#2f313a"
    >
      this is a regular label
    </div>
    <div
      className="moreInfo c2"
      icon="wg-question"
    >
      <div
        className="c3"
        size={16}
        type="#59636f"
      >
        <div
          className="icon"
          onMouseOver={[Function]}
        >
          <i
            className="wg-question"
          />
          <div
            className="c4"
          >
            <div
              className="tooltip c5"
            >
              <div
                className="hit-area"
                onMouseOut={[Function]}
              >
                this is a more info text
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
